objects/College__c.object
<CustomObject>
    <description>new desc added</description>
    <fields>
        <fullName>CollegeP1__c</fullName>
        <label>CollegeP1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aaaa</fullName>
                </value>
                <value>
                    <fullName>bbbb</fullName>
                </value>
                <value>
                    <fullName>ccccc</fullName>
                </value>
                <value>
                    <fullName>dddd</fullName>
                </value>
                <value>
                    <fullName>eeee</fullName>
                </value>
                <value>
                    <fullName>ffffff</fullName>
                </value>
                <value>
                    <fullName>ggggg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeP2__c</fullName>
        <label>CollegeP2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1111</fullName>
                </value>
                <value>
                    <fullName>222</fullName>
                </value>
                <value>
                    <fullName>333</fullName>
                </value>
                <value>
                    <fullName>44444</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeP44__c</fullName>
        <label>CollegeP44</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sfadf</fullName>
                </value>
                <value>
                    <fullName>sdfa</fullName>
                </value>
                <value>
                    <fullName>aasfds</fullName>
                </value>
                <value>
                    <fullName>fasdf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistFieldMulti1__c</fullName>
        <label>PicklistFieldMulti1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aaaa</fullName>
                </value>
                <value>
                    <fullName>bbbb</fullName>
                </value>
                <value>
                    <fullName>ccccc</fullName>
                </value>
                <value>
                    <fullName>dddd</fullName>
                </value>
                <value>
                    <fullName>eeded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentsCount__c</fullName>
        <description>StudentsCount</description>
        <inlineHelpText>StudentsCount</inlineHelpText>
        <label>StudentsCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Formula__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>testf1__c</fullName>
        <description>test</description>
        <label>testf1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testf2__c</fullName>
        <label>testf2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>College</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>College</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>